microservices/k8s/gateway/class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: marketplace-gateway
spec:
  controllerName: 34.232.30.223/marketplace-gateway-controller
