microservices/k8s/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: marketplace-httproute
  annotations:
    konghq.com/strip-path: 'true'
spec:
  parentRefs:
  - name: marketplace-gateway
    namespace: kong
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /api/auth
      backendRefs:
      - name: auth-service
        kind: Service
        port: 80
    - matches:
      - path:
          type: PathPrefix
          value: /api/order
      backendRefs:
      - name: order-service
        kind: Service
        port: 80
    - matches:
      - path:
          type: PathPrefix
          value: /api/product
      backendRefs:
      - name: product-service
        kind: Service
        port: 80
    - matches:
      - path:
          type: PathPrefix
          value: /api/tenant
      backendRefs:
      - name: tenant-service
        kind: Service
        port: 80
    - matches:
      - path:
          type: PathPrefix
          value: /api/wishlist
      backendRefs:
      - name: wishlist-service
        kind: Service
        port: 80
